# libit

./: .gitignore  BINARY_README.md  README.md  binary-common.gradle  binary-config-template.gradle  build.gradle  build.sh  build_for_scaffold.sh  build_for_sport.sh  build_for_vpn.sh  build_utils.sh  check_privileged_permission.sh  common-template.gradle  common_template.gradle  config.gradle  create_scaffold_project.sh  gradle.properties  scaffold_config.json  settings.gradle  template.gradle
matisse/: .gitignore  CMakeLists.txt  build.gradle  internal-config.gradle
matisse/src/main/: AndroidManifest.xml
matisse/src/main/java/com/zhihu/matisse/: SelectionCreator.java
matisse/src/main/java/com/zhihu/matisse/filter/: GifSizeFilter.java
matisse/src/main/java/com/zhihu/matisse/internal/entity/: SelectionSpec.java
matisse/src/main/java/com/zhihu/matisse/internal/model/: SelectedItemCollection.java
matisse/src/main/java/com/zhihu/matisse/internal/utils/: Cropper.java
matisse/src/main/java/com/zhihu/matisse/ui/: MatisseActivity.java
matisse/src/main/res/anim/: dropdown_in.xml  dropdown_out.xml
matisse/src/main/res/layout/: activity_matisse.xml
matisse/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
matisse/src/main/res/values-ar/: strings.xml
matisse/src/main/res/values-ca/: strings.xml
matisse/src/main/res/values-de/: strings.xml
matisse/src/main/res/values-es/: strings.xml
matisse/src/main/res/values-it/: strings.xml
matisse/src/main/res/values-ko/: strings.xml
matisse/src/main/res/values-pl/: strings.xml
matisse/src/main/res/values-pt-rBR/: strings.xml
matisse/src/main/res/values-ru/: strings.xml
matisse/src/main/res/values-tr-rTR/: strings.xml
matisse/src/main/res/values-uk/: strings.xml
matisse/src/main/res/values-vi/: strings.xml
matisse/src/main/res/values-zh/: strings.xml
matisse/src/main/res/values-zh-rTW/: strings.xml
matisse/src/main/res/xml/: file_paths_public.xml
matisse/src_crop/main/java/com/yalantis/ucrop/: UCrop.java  UCropActivity.java  UCropFragment.java
matisse/src_crop/main/java/com/yalantis/ucrop/view/: CropImageView.java  OverlayView.java  UCropView.java
matisse/src_crop/main/res/layout/: ucrop_activity_photobox.xml
matisse/src_crop/main/res/values/: colors.xml
(+2289 files in other folders)
